# internal/user/delivery/models/auth.go
@@ -7,11 +7,7 @@ import (
 	"go-park-mail-ru/2022_2_BugOverload/internal/pkg/errors"
 )
 
-type UserAuthRequest struct {
-	Nickname string `json:"nickname,omitempty" example:"Bot373"`
-	Email    string `json:"email,omitempty" example:"dop123@mail.ru"`
-	Avatar   string `json:"avatar,omitempty" example:"{{ссылка}}"`
-}
+type UserAuthRequest struct{}
 
 func NewUserAuthRequest() *UserAuthRequest {
 	return &UserAuthRequest{}
@@ -25,8 +21,18 @@ func (u *UserAuthRequest) Bind(r *http.Request) error {
 	return nil
 }
 
-func (u *UserAuthRequest) ToPublic(user *models.User) UserAuthRequest {
-	return UserAuthRequest{
+type UserAuthResponse struct {
+	Nickname string `json:"nickname,omitempty" example:"Bot373"`
+	Email    string `json:"email,omitempty" example:"dop123@mail.ru"`
+	Avatar   string `json:"avatar,omitempty" example:"{{ссылка}}"`
+}
+
+func NewUserAuthResponse() *UserAuthResponse {
+	return &UserAuthResponse{}
+}
+
+func (u *UserAuthResponse) ToPublic(user *models.User) UserAuthResponse {
+	return UserAuthResponse{
 		Email:    user.Email,
 		Nickname: user.Nickname,
 		Avatar:   user.Avatar,
